fixed spacing issue on landing page description elements

--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,13 @@
 	font-weight: 300;
 	margin-left: 30px;
 	margin-right: 30px;
+	flex: 1;
+}
+
+.details-panel-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
 
 /* Download section styling */
